--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,7 @@ python-dateutil==2.9.0.post0
 pytz==2025.1
 scipy==1.15.2
 seaborn==0.13.2
-setuptools==75.8.0
+setuptools>=78.1.1
 six==1.17.0
 sympy==1.13.1
 torch==2.6.0
